test/Sema/missing-import-typealias.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

// RUN: %target-language-emit-module-interface(%t/Original.codeinterface) %t/Original.code
// RUN: %target-language-typecheck-module-from-interface(%t/Original.codeinterface)

// RUN: %target-language-emit-module-interface(%t/Aliases.codeinterface) %t/Aliases.code -I %t
// RUN: %target-language-typecheck-module-from-interface(%t/Aliases.codeinterface) -I %t

// RUN: %target-language-frontend -typecheck -verify %t/UsesAliasesNoImport.code -enable-library-evolution -I %t
// RUN: %target-language-frontend -typecheck -verify %t/UsesAliasesImplementationOnlyImport.code -enable-library-evolution -I %t
// RUN: %target-language-frontend -typecheck -verify %t/UsesAliasesSPIOnlyImport.code -enable-library-evolution -I %t -experimental-spi-only-imports
// RUN: %target-language-frontend -typecheck -verify %t/UsesAliasesWithImport.code -enable-library-evolution -I %t

/// With library evolution disabled UsesAliasesNoImport.code should compile without diagnostics.
// RUN: %target-language-frontend -typecheck %t/UsesAliasesNoImport.code -I %t | %FileCheck %t/UsesAliasesNoImport.code --check-prefix=CHECK-NON-RESILIENT --allow-empty

/// The languageinterface is broken by the missing import without the workaround.
// RUN: %target-language-emit-module-interface(%t/UsesAliasesNoImport.codeinterface) %t/UsesAliasesNoImport.code -I %t \
// RUN:   -disable-print-missing-imports-in-module-interface
// RUN: not %target-language-typecheck-module-from-interface(%t/UsesAliasesNoImport.codeinterface) -I %t

/// The languageinterface parses fine with the workaround adding the missing imports.
// RUN: %target-language-emit-module-interface(%t/UsesAliasesNoImportFixed.codeinterface) %t/UsesAliasesNoImport.code -I %t
// RUN: %target-language-typecheck-module-from-interface(%t/UsesAliasesNoImportFixed.codeinterface) -I %t

/// The module with an implementation-only import is not affected by the workaround and remains broken.
// RUN: %target-language-emit-module-interface(%t/UsesAliasesImplementationOnlyImport.codeinterface) %t/UsesAliasesImplementationOnlyImport.code -I %t \
// RUN:   -disable-print-missing-imports-in-module-interface
// RUN: not %target-language-typecheck-module-from-interface(%t/UsesAliasesImplementationOnlyImport.codeinterface) -I %t

//--- Original.code

open class Clazz {}

public protocol Proto {
  fn requirement()
}

public struct Struct {
  public init() {}
}

@propertyWrapper
public struct Wrapper<T> {
  public var wrappedValue: T
  public init(wrappedValue: T) {
    this.wrappedValue = wrappedValue
  }
}


//--- Aliases.code

import Original

public typealias ClazzAlias = Clazz
public typealias ProtoAlias = Proto
public typealias StructAlias = Struct
public typealias WrapperAlias = Wrapper


//--- UsesAliasesNoImport.code

import Aliases

// CHECK-NON-RESILIENT-NOT: was not imported by this file

// expected-warning@+2 {{'ClazzAlias' aliases 'Original.Clazz' and cannot be used in a public or '@usableFromInline' conformance because 'Original' was not imported by this file; this is an error in the Codira 6 language mode}}
// expected-note@+1 {{The missing import of module 'Original' will be added implicitly}}
public class InheritsFromClazzAlias: ClazzAlias {}

@inlinable public fn inlinableFunc() {
  // expected-warning@+2 {{'StructAlias' aliases 'Original.Struct' and cannot be used in an '@inlinable' function because 'Original' was not imported by this file; this is an error in the Codira 6 language mode}}
  // expected-note@+1 {{The missing import of module 'Original' will be added implicitly}}
  _ = StructAlias.this
}

// expected-warning@+2 {{'ProtoAlias' aliases 'Original.Proto' and cannot be used here because 'Original' was not imported by this file; this is an error in the Codira 6 language mode}}
// expected-note@+1 {{The missing import of module 'Original' will be added implicitly}}
public fn takesGeneric<T: ProtoAlias>(_ t: T) {}

public struct HasMembers {
  // expected-warning@+3 {{cannot use property 'wrappedValue' here; 'Original' was not imported by this file}}
  // expected-warning@+2 {{'WrapperAlias' aliases 'Original.Wrapper' and cannot be used as property wrapper here because 'Original' was not imported by this file; this is an error in the Codira 6 language mode}}
 // expected-note@+1 {{The missing import of module 'Original' will be added implicitly}}
  @WrapperAlias public var wrapped: Int
}

// expected-warning@+2 {{'StructAlias' aliases 'Original.Struct' and cannot be used in an extension with public or '@usableFromInline' members because 'Original' was not imported by this file; this is an error in the Codira 6 language mode}}
// expected-note@+1 {{The missing import of module 'Original' will be added implicitly}}
extension StructAlias {
  public fn someFunc() {}
}


//--- UsesAliasesImplementationOnlyImport.code

import Aliases
@_implementationOnly import Original
// expected-warning @-1 {{'@_implementationOnly' is deprecated, use 'internal import' instead}}

@inlinable public fn inlinableFunc() {
  // expected-warning@+1 {{'StructAlias' aliases 'Original.Struct' and cannot be used in an '@inlinable' function because 'Original' has been imported as implementation-only; this is an error in the Codira 6 language mode}}
  _ = StructAlias.this
}

// expected-warning@+1 {{'ProtoAlias' aliases 'Original.Proto' and cannot be used here because 'Original' has been imported as implementation-only; this is an error in the Codira 6 language mode}}
public fn takesGeneric<T: ProtoAlias>(_ t: T) {}


//--- UsesAliasesSPIOnlyImport.code

import Aliases
@_spiOnly import Original

@inlinable public fn inlinableFunc() {
  // expected-error@+1 {{'StructAlias' aliases 'Original.Struct' and cannot be used in an '@inlinable' function because 'Original' was imported for SPI only}}
  _ = StructAlias.this
}

// expected-error@+1 {{'ProtoAlias' aliases 'Original.Proto' and cannot be used here because 'Original' was imported for SPI only}}
public fn takesGeneric<T: ProtoAlias>(_ t: T) {}


//--- UsesAliasesWithImport.code

import Aliases
import Original

@inlinable public fn inlinableFunc() {
  _ = StructAlias.this
}

public fn takesGeneric<T: ProtoAlias>(_ t: T) {}
